# tinyargs

./: README.md  tinyargs.cabal
.circleci/: config.yml
common/Data/RadixTree/: Internal.hs
src/Data/Tree/Radix/: Char.hs
src/Data/Tree/Radix/Char/: Internal.hs
src/System/Console/Args/: Tiny.hs
test/compliance/: Main.hs
